Add 4 core and 16 core co-processors (#162)
* Add 4, 16, and 64 core co-processors

* Update langs for tiered co-processors

* Remove 64 core co-processor

* Add textures for tiered co-processors

* Add basic recipes for tiered co-processors

* Remove 4 as valid accelerator meta

--- a/src/main/resources/assets/appliedenergistics2/lang/es_ES.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/es_ES.lang
@@ -47,6 +47,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=4k Almacén de Trabajo
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k Almacén de Trabajo
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k Almacén de Trabajo
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Unidad de Coprocesador
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=4 Centro Unidad de Coprocesador
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Centro Unidad de Coprocesador
 tile.appliedenergistics2.BlockCraftingUnit.name=Unidad de Creación
 tile.appliedenergistics2.BlockMolecularAssembler.name=Ensambladora Molecular
 
