--- a/src/main/resources/assets/appliedenergistics2/lang/hu_HU.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/hu_HU.lang
@@ -48,6 +48,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=4k Barkács Tároló
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k Barkács Tároló
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k Barkács Tároló
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Barkács Segédfeldolgozó Egység
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=4 Mag Barkács Segédfeldolgozó Egység
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Mag Barkács Segédfeldolgozó Egység
 tile.appliedenergistics2.BlockCraftingUnit.name=Barkácsoló Egység
 tile.appliedenergistics2.BlockMolecularAssembler.name=Molekuláris Összeállító
 
