--- a/src/main/resources/assets/appliedenergistics2/lang/cs_CZ.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/cs_CZ.lang
@@ -47,6 +47,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=4k výrobní úložiště
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k výrobní úložiště
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k výrobní úložiště
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Výrobní re-procesní jednotka
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=4 Jádro re-procesní jednotka
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Jádro re-procesní jednotka
 tile.appliedenergistics2.BlockCraftingUnit.name=Výrobní jednotka
 tile.appliedenergistics2.BlockMolecularAssembler.name=Molekulární sestavovač
 
