--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -48,6 +48,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=4k Crafting Storage
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k Crafting Storage
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k Crafting Storage
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Crafting Co-Processing Unit
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=Quad Core Co-Processing Unit
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Core Co-Processing Unit
 tile.appliedenergistics2.BlockCraftingUnit.name=Crafting Unit
 tile.appliedenergistics2.BlockMolecularAssembler.name=Molecular Assembler
 
