--- a/src/main/resources/assets/appliedenergistics2/lang/fr_FR.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/fr_FR.lang
@@ -48,6 +48,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=Disque 4k pour la fabricati
 tile.appliedenergistics2.BlockCraftingStorage16k.name=Disque 16k pour la fabrication
 tile.appliedenergistics2.BlockCraftingStorage64k.name=Disque 64k pour la fabrication
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Unité de co-traitement
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=4 Cœur Unité de co-traitement
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Cœur Unité de co-traitement
 tile.appliedenergistics2.BlockCraftingUnit.name=Unité de fabrication
 tile.appliedenergistics2.BlockMolecularAssembler.name=Assembleur moléculaire
 
