--- a/src/main/resources/assets/appliedenergistics2/lang/ja_JP.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/ja_JP.lang
@@ -50,6 +50,8 @@ tile.appliedenergistics2.BlockCraftingStorage4k.name=4k クラフティングス
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k クラフティングストレージ
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k クラフティングストレージ
 tile.appliedenergistics2.BlockCraftingAccelerator.name=MEクラフティングCPU
+tile.appliedenergistics2.BlockCraftingAccelerator4x.name=ME4芯クラフティングCPU
+tile.appliedenergistics2.BlockCraftingAccelerator16x.name=ME16芯クラフティングCPU
 tile.appliedenergistics2.BlockCraftingUnit.name=ME分子分子組立室
 
 chat.appliedenergistics2.ChestCannotReadStorageCell=MEチェストがストレージセルを読み取れませんでした
