--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -47,6 +47,10 @@ tile.appliedenergistics2.BlockCraftingStorage.name=1k Crafting Storage
 tile.appliedenergistics2.BlockCraftingStorage4k.name=4k Crafting Storage
 tile.appliedenergistics2.BlockCraftingStorage16k.name=16k Crafting Storage
 tile.appliedenergistics2.BlockCraftingStorage64k.name=64k Crafting Storage
+tile.appliedenergistics2.BlockCraftingStorage256k.name=256k Crafting Storage
+tile.appliedenergistics2.BlockCraftingStorage1024k.name=1024k Crafting Storage
+tile.appliedenergistics2.BlockCraftingStorage4096k.name=4096k Crafting Storage
+tile.appliedenergistics2.BlockCraftingStorage16384k.name=16384k Crafting Storage
 tile.appliedenergistics2.BlockCraftingAccelerator.name=Crafting Co-Processing Unit
 tile.appliedenergistics2.BlockCraftingAccelerator4x.name=Quad Core Co-Processing Unit
 tile.appliedenergistics2.BlockCraftingAccelerator16x.name=16 Core Co-Processing Unit
