--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -223,6 +223,7 @@ gui.appliedenergistics2.ETAFormat=HH:mm:ss
 gui.appliedenergistics2.Crafting=Crafting
 gui.appliedenergistics2.Scheduled=Scheduled
 gui.appliedenergistics2.CraftingStatus=Crafting Status
+gui.appliedenergistics2.RemainingOperations=Remaining Operations
 gui.appliedenergistics2.FromStorage=Available
 gui.appliedenergistics2.ToCraft=To Craft
 gui.appliedenergistics2.CraftingPlan=Crafting Plan
