Add a crafting tree view to requests for better insights (#283)
- Sets a configurable limit on the number of simulation steps and the size of the serialized tree to prevent DDOS
 - Culls invisible parts of the tree when rendering, tested to maintain high fps on requests with 200k+ individual steps
 - Displays the machines that are responsible for crafting via interfaces, with an API to override the displayed itemstack (for GT hatches to point to their multiblock when implemented)

More features, such as searching, filtering the tree etc. might come in future PRs.

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -171,6 +171,7 @@ gui.appliedenergistics2.Patterns=Patterns
 gui.appliedenergistics2.SpatialIOPort=Spatial IO Port
 gui.appliedenergistics2.StoredEnergy=Stored Energy
 gui.appliedenergistics2.StoredItems=Stored Items
+gui.appliedenergistics2.StoredStacks=Stored Stacks
 gui.appliedenergistics2.Terminal=Terminal
 gui.appliedenergistics2.InterfaceTerminal=Interface Terminal
 gui.appliedenergistics2.InterfaceTerminalHint=Show Or Hide on Interface Terminal.
@@ -220,6 +221,7 @@ gui.appliedenergistics2.Empty=Empty
 gui.appliedenergistics2.Stored=Stored
 gui.appliedenergistics2.Cancel=Cancel
 gui.appliedenergistics2.ETAFormat=HH:mm:ss
+gui.appliedenergistics2.SwitchCraftingSimulationDisplayMode=Switch display mode (List/Tree)
 gui.appliedenergistics2.Crafting=Crafting
 gui.appliedenergistics2.Scheduled=Scheduled
 gui.appliedenergistics2.CraftingStatus=Crafting Status
@@ -230,6 +232,10 @@ gui.appliedenergistics2.CraftingPlan=Crafting Plan
 gui.appliedenergistics2.Automatic=Automatic
 gui.appliedenergistics2.Start=Start
 gui.appliedenergistics2.Missing=Missing
+gui.appliedenergistics2.NoCraftingTreeReceived=No crafting tree received
+gui.appliedenergistics2.CraftingStepLimitExceeded=Crafting step limit exceeded
+gui.appliedenergistics2.RequestedItem=Requested item
+gui.appliedenergistics2.SimulationIncomplete=Simulation incomplete
 gui.appliedenergistics2.Bytes=Storage
 gui.appliedenergistics2.Set=Set
 gui.appliedenergistics2.Simulation=Simulation
