Add a blank pattern refill upgrade to the pattern terminals (#305)
* Add a blank pattern refill upgrade to the pattern terminals
https://github.com/GTNewHorizons/GT-New-Horizons-Modpack/issues/10614

* fix getDrops()
call refilling at the terminal open and when adding refill upgrade

---------

Co-authored-by: Martin Robertz <dream-master@gmx.net>

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -514,6 +514,7 @@ item.appliedenergistics2.ItemMaterial.CardRedstone.name=Redstone Card
 item.appliedenergistics2.ItemMaterial.CardSpeed.name=Acceleration Card
 item.appliedenergistics2.ItemMaterial.CardSuperSpeed.name=Hyper-Acceleration Card
 item.appliedenergistics2.ItemMaterial.CardOreFilter.name=Oredictionary Filter Card
+item.appliedenergistics2.ItemMaterial.CardPatternRefiller.name=Pattern Refiller Card
 
 item.appliedenergistics2.ItemMaterial.Cell2SpatialPart.name=2³ Spatial Component
 item.appliedenergistics2.ItemMaterial.Cell16SpatialPart.name=16³ Spatial Component
