Feature: Add Advanced Blocking Card for interfaces (#308)
* Feature: Add Advanced Blocking Card for interfaces

Purpose: In blocking mode, a ME interface will not push items into its
target if it has items in it. If the target is another ME interface,
blocking mode looks only at the 9 slot inventory. The advanced blocking
card changes this to include check for items in the underlying ME system.

Usage: The card is added to the TARGET interface, i.e. the interface that
will be receiving items. Currently, the card is not allowed in P2P
interfaces because I'm afraid of bugs/unexpected behavior.

* Add the advanced blocking mode as a setting.

Advanced Blocking Mode is now a setting to toggle between two modes:

- Default: Exhibits the same behavior as normal blocking mode, ignores
circuits.

- Any: Blocks on any item, including circuits. I'm leaving this here in
case of some niche behavior someone might want, but the use case is very
uncommon (maybe some weird jig with taking circuits on demand...).

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -432,6 +432,11 @@ gui.tooltips.appliedenergistics2.SidelessModeSidedDesc=Each fluid is accessible 
 gui.tooltips.appliedenergistics2.SidelessModeSideless=Sideless Mode
 gui.tooltips.appliedenergistics2.SidelessModeSidelessDesc=All fluids are accessible from all sides
 
+gui.tooltips.appliedenergistics2.AdvancedBlockingModeDefault=Default Blocking Mode
+gui.tooltips.appliedenergistics2.AdvancedBlockingModeDefaultDesc=Blocking interfaces follow follow normal blocking rules (ignore circuits, etc.)
+gui.tooltips.appliedenergistics2.AdvancedBlockingModeAll=Loose Mode
+gui.tooltips.appliedenergistics2.AdvancedBlockingModeAllDesc=Blocking interfaces will block on any item in this ME system.
+
 # Units
 gui.appliedenergistics2.units.appliedenergstics=AE
 gui.appliedenergistics2.units.ic2=Energy Units
@@ -515,6 +520,7 @@ item.appliedenergistics2.ItemMaterial.CardSpeed.name=Acceleration Card
 item.appliedenergistics2.ItemMaterial.CardSuperSpeed.name=Hyper-Acceleration Card
 item.appliedenergistics2.ItemMaterial.CardOreFilter.name=Oredictionary Filter Card
 item.appliedenergistics2.ItemMaterial.CardPatternRefiller.name=Pattern Refiller Card
+item.appliedenergistics2.ItemMaterial.CardAdvancedBlocking.name=Advanced Blocking Card
 
 item.appliedenergistics2.ItemMaterial.Cell2SpatialPart.name=2³ Spatial Component
 item.appliedenergistics2.ItemMaterial.Cell16SpatialPart.name=16³ Spatial Component
