--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -104,6 +104,7 @@ chat.appliedenergistics2.TunnelOutputsAreAt=Tunnel outputs are at:
 chat.appliedenergistics2.InterfaceInOtherDim=Interface located at dimension: %d and cant be highlighted
 chat.appliedenergistics2.InterfaceHighlighted=The interface is now highlighted at %d, %d, %d
 chat.appliedenergistics2.CraftingItemsWentMissing=Could not start craft, ingredient went missing: %d * %s
+chat.appliedenergistics2.FBOUnsupported=OpenGL FBOs not supported, cannot export image
 # Creative Tabs
 itemGroup.appliedenergistics2=Applied Energistics 2
 itemGroup.appliedenergistics2.facades=Applied Energistics 2 - Facades
@@ -368,6 +369,7 @@ gui.tooltips.appliedenergistics2.TerminalStyle=Terminal Style
 gui.tooltips.appliedenergistics2.TerminalStyle_Full=Full Screen Terminal
 gui.tooltips.appliedenergistics2.TerminalStyle_Tall=Tall Centered Terminal
 gui.tooltips.appliedenergistics2.TerminalStyle_Small=Small Centered Terminal
+gui.tooltips.appliedenergistics2.SaveAsImage=Save as image
 
 gui.tooltips.appliedenergistics2.DoesntDespawn=This item won't de-spawn.
 gui.tooltips.appliedenergistics2.EmitterMode=Crafting Emitter Mode
