PreCrafting mode to add crafting plans when items missing (#341)
* fix EmitItemTask not shown in the crafting view

* add PreCrafting mode when press ctrl

* Rename

* replace bool to enum
replace usePreCrafting to craftingMode

* add icon for ignore missing

* rename IgnoreMissing

* spotless and fix array of possible OOB

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -216,6 +216,7 @@ gui.appliedenergistics2.MultipleOutputs=%1$d%% second, %2$d%% third output.
 gui.appliedenergistics2.SelectAmount=Select Amount
 gui.appliedenergistics2.CopyMode=Copy Mode
 gui.appliedenergistics2.CopyModeDesc=Controls if the contents of the configuration pane are cleared when you remove the cell.
+gui.appliedenergistics2.PreCraftStart=Ignore missing
 gui.appliedenergistics2.Next=Next
 gui.appliedenergistics2.Lumen=Lumen
 gui.appliedenergistics2.Empty=Empty
