Fix untranslated words

--- a/src/main/resources/assets/appliedenergistics2/lang/uk_UA.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/uk_UA.lang
@@ -406,7 +406,7 @@ gui.tooltips.appliedenergistics2.SaveSearchString=Зберегти рядок п
 gui.tooltips.appliedenergistics2.SaveSearchStringYes=Так
 gui.tooltips.appliedenergistics2.SaveSearchStringNo=Ні
 gui.tooltips.appliedenergistics2.DoublePattern=Подвоїти шаблон
-gui.tooltips.appliedenergistics2.DoublePatternHint=Double stack sizes of pattern inputs and output(s) if it can. x8, коли shift утримується.
+gui.tooltips.appliedenergistics2.DoublePatternHint=Подвоїти розмір стеку входів та виходів шаблону, якщо це можливо. x8, коли shift утримується.
 gui.tooltips.appliedenergistics2.CraftingStatus=Статус створення
 gui.tooltips.appliedenergistics2.CraftingStatusDesc=Відкриває вікно стану створення
 gui.tooltips.appliedenergistics2.ToggleMolecularAssemblers=Перемкнути відображення тільки інтерфейсів створення
@@ -496,9 +496,9 @@ item.appliedenergistics2.ItemAdvancedStorageCell.256k.name=256k ME диск зб
 item.appliedenergistics2.ItemAdvancedStorageCell.1024k.name=1024k ME диск зберігання
 item.appliedenergistics2.ItemAdvancedStorageCell.4096k.name=4096k ME диск зберігання
 item.appliedenergistics2.ItemAdvancedStorageCell.16384k.name=16384k ME диск зберігання
-item.appliedenergistics2.ItemExtremeStorageCell.Container.name=ME Block Container Cell
-item.appliedenergistics2.ItemExtremeStorageCell.Quantum.name=ME Квантова диск пам'яті
-item.appliedenergistics2.ItemExtremeStorageCell.Singularity.name=ME Digital Singularity Cell
+item.appliedenergistics2.ItemExtremeStorageCell.Container.name=ME Диск для збереження блоків
+item.appliedenergistics2.ItemExtremeStorageCell.Quantum.name=ME Квантовий диск зберігання
+item.appliedenergistics2.ItemExtremeStorageCell.Singularity.name=ME Сингулярний диск зберігання
 item.appliedenergistics2.ItemCreativeStorageCell.name=Творча ME диск зберігання
 item.appliedenergistics2.ItemVoidStorageCell.name=Пустотний ME диск зберігання
 item.appliedenergistics2.ItemEncodedPattern.name=Закодований шаблон
@@ -546,8 +546,8 @@ item.appliedenergistics2.ItemMaterial.Cell16384kPart.name=16384k ME Компон
 item.appliedenergistics2.ItemMaterial.CertusQuartzCrystal.name=Кристал істинного кварцу
 item.appliedenergistics2.ItemMaterial.CertusQuartzCrystalCharged.name=Кристал зарядженого істиного кварцу
 item.appliedenergistics2.ItemMaterial.CertusQuartzDust.name=Пил істинного кварцу
-item.appliedenergistics2.ItemMaterial.EmptyStorageCell.name=ME Storage Housing
-item.appliedenergistics2.ItemMaterial.EmptyAdvancedStorageCell.name=ME Advanced Storage Housing
+item.appliedenergistics2.ItemMaterial.EmptyStorageCell.name=ME Основа диску
+item.appliedenergistics2.ItemMaterial.EmptyAdvancedStorageCell.name=ME Просунута основа диску
 item.appliedenergistics2.ItemMaterial.EnderDust.name=Пил Енду
 
 item.appliedenergistics2.ItemMaterial.Flour.name=Борошно
