appeng/client/gui/widgets: GuiImgButton.java: Add extra options button
Adds generic extra options button, which is a button that is skinned as
'...' (ellipses). Can be used for any gui.

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -446,6 +446,8 @@ gui.tooltips.appliedenergistics2.CraftingModeStandardDesc=Only starts craft if a
 gui.tooltips.appliedenergistics2.CraftingModeIgnoreMissing=Ignore Missing Crafting Mode
 gui.tooltips.appliedenergistics2.CraftingModeIgnoreMissingDesc=Starts craft even if ingredients are missing from the ME System.
 
+gui.tooltips.appliedenergistics2.ExtraOptions=Extra Options
+
 # Units
 gui.appliedenergistics2.units.appliedenergstics=AE
 gui.appliedenergistics2.units.ic2=Energy Units
