Add network bytes information for network status gui (#419)
* Add network bytes infomation for network status gui

* Add network bytes infomation for network status gui

* Update src/main/java/appeng/me/cache/GridStorageCache.java

Co-authored-by: Andrei Antropov <q.laiff@gmail.com>

* swap some of Class.forName to instanceof

* make cache update delay

* make cache update delay

* Change error conditions

* Change delay from 1000t(50s) to 100t(5s)

* Let cache update data at the beginning

* Add a cfg that can change the cache update rate

* Add fluid bytes information

* Add essentia status and change gui form

* Apply the spotlessApply

* Delete useless rows

* Delete useless rows

* Revert "Merge branch 'GTNewHorizons:master' into master"

This reverts commit 01dde621b8a40ea870c3d61a8e9f2dc8c18475f9, reversing
changes made to d09184e8a376448f637df87eb0d490eb0fb4607a.

* Revert "Revert "Merge branch 'GTNewHorizons:master' into master""

This reverts commit 864bbd494c9f9f46ef5f30648fe6663701da1be8.

* back roll some commits

* delete incorrect import and depends

delete non compliant  depends

* Change interface's name

* Remove wrong annotations

* Add new AdvancedNetworkTool

only text and texture, wait to implement the actual functions.

* Add the Advanced Network Tool gui

* Add the advanced toolbox for other Gui

* Update Build Script

* Add recipe into AE and fix some issue

* Fix the wrong info when cell in ME chest

* Add external buttons for advanced network status

Actual function still working on it

* merge with main branch

Update Settings.java

* Apply spotless

* Add external Gui for advanced network tool

* Add more info to new Gui

* Apply spotless

* Replace some class to interface

---------

Co-authored-by: Andrei Antropov <q.laiff@gmail.com>

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -151,6 +151,7 @@ gui.appliedenergistics2.StorageBus=Storage Bus
 gui.appliedenergistics2.EnergyDrain=Passive Drain
 gui.appliedenergistics2.Installed=Installed
 gui.appliedenergistics2.NetworkTool=Network Tool
+gui.appliedenergistics2.AdvancedNetworkTool=Advanced Network Tool
 gui.appliedenergistics2.PowerUsageRate=Energy Usage
 gui.appliedenergistics2.PowerInputRate=Energy Generation
 gui.appliedenergistics2.PortableCell=Portable Cell
@@ -272,6 +273,19 @@ gui.appliedenergistics2.HoldShiftClick_HIGHLIGHT_INTERFACE=Hold shift click to h
 gui.appliedenergistics2.Nothing=Nothing
 gui.appliedenergistics2.VoidCellTooltip=Deletes §4everything§7 stored on it
 gui.appliedenergistics2.Deprecated=Deprecated, will be removed soon!
+
+gui.appliedenergistics2.NetworkBytesDetails=Network Bytes Details
+gui.appliedenergistics2.Items=Items
+gui.appliedenergistics2.Fluids=Fluids
+gui.appliedenergistics2.Essentias=Essen
+gui.appliedenergistics2.NetworkItemCellCount=Network Item Cell Count
+gui.appliedenergistics2.NetworkFluidCellCount=Network Fluid Cell Count
+gui.appliedenergistics2.NetworkEssentiaCellCount=Network Essentia Cell Count
+gui.appliedenergistics2.Green=Green
+gui.appliedenergistics2.Orange=Orange
+gui.appliedenergistics2.Red=Red
+gui.appliedenergistics2.TypesInfo=Types
+gui.appliedenergistics2.BytesInfo=Bytes
 
 # GUI Colors - ARGB
 gui.color.appliedenergistics2.SearchboxFocused=6E000000
@@ -448,6 +462,11 @@ gui.tooltips.appliedenergistics2.CraftingModeIgnoreMissing=Ignore Missing Crafti
 gui.tooltips.appliedenergistics2.CraftingModeIgnoreMissingDesc=Starts craft even if ingredients are missing from the ME System.
 
 gui.tooltips.appliedenergistics2.ExtraOptions=Extra Options
+
+gui.tooltips.appliedenergistics2.SwitchBytesInfo=Cell Info
+gui.tooltips.appliedenergistics2.SwitchBytesInfo_Item=Item
+gui.tooltips.appliedenergistics2.SwitchBytesInfo_Fluid=Fluid
+gui.tooltips.appliedenergistics2.SwitchBytesInfo_Essentia=Essentia
 
 # Units
 gui.appliedenergistics2.units.appliedenergstics=AE
@@ -652,6 +671,7 @@ item.appliedenergistics2.ToolNetherQuartzWrench.name=Nether Quartz Wrench
 item.appliedenergistics2.ItemPaintBall.name=Paint Ball
 item.appliedenergistics2.ToolPortableCell.name=Portable Cell
 item.appliedenergistics2.ToolNetworkTool.name=Network Tool
+item.appliedenergistics2.ToolAdvancedNetworkTool.name=Advanced Network Tool
 item.appliedenergistics2.ToolChargedStaff.name=Charged Staff
 item.appliedenergistics2.ToolEntropyManipulator.name=Entropy Manipulator
 item.appliedenergistics2.ToolMassCannon.name=Matter Cannon
