Change the interface and finish the whole function. (#427)
* Add network bytes infomation for network status gui

* Add network bytes infomation for network status gui

* Update src/main/java/appeng/me/cache/GridStorageCache.java

Co-authored-by: Andrei Antropov <q.laiff@gmail.com>

* swap some of Class.forName to instanceof

* make cache update delay

* make cache update delay

* Change error conditions

* Change delay from 1000t(50s) to 100t(5s)

* Let cache update data at the beginning

* Add a cfg that can change the cache update rate

* Add fluid bytes information

* Add essentia status and change gui form

* Apply the spotlessApply

* Delete useless rows

* Delete useless rows

* Revert "Merge branch 'GTNewHorizons:master' into master"

This reverts commit 01dde621b8a40ea870c3d61a8e9f2dc8c18475f9, reversing
changes made to d09184e8a376448f637df87eb0d490eb0fb4607a.

* Revert "Revert "Merge branch 'GTNewHorizons:master' into master""

This reverts commit 864bbd494c9f9f46ef5f30648fe6663701da1be8.

* back roll some commits

* delete incorrect import and depends

delete non compliant  depends

* Change interface's name

* Remove wrong annotations

* Add new AdvancedNetworkTool

only text and texture, wait to implement the actual functions.

* Add the Advanced Network Tool gui

* Add the advanced toolbox for other Gui

* Update Build Script

* Add recipe into AE and fix some issue

* Fix the wrong info when cell in ME chest

* Add external buttons for advanced network status

Actual function still working on it

* merge with main branch

Update Settings.java

* Apply spotless

* Add external Gui for advanced network tool

* Add more info to new Gui

* Apply spotless

* Replace some class to interface

* Add chinese lang for #426

* Change the trans to better version

* Fix some problem and finish some function

Finish the data statistics, Change the interface function, Add depen

--- a/src/main/resources/assets/appliedenergistics2/lang/zh_TW.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/zh_TW.lang
@@ -176,6 +176,7 @@ gui.appliedenergistics2.Scheduled=計劃合成
 gui.appliedenergistics2.CraftingStatus=合成狀態
 gui.appliedenergistics2.FromStorage=可用數量
 gui.appliedenergistics2.ToCraft=合成數量
+gui.appliedenergistics2.ToCraftRequests=合成次數
 gui.appliedenergistics2.CraftingPlan=合成計劃
 gui.appliedenergistics2.Automatic=自動分配
 gui.appliedenergistics2.Start=開始
