Add % share of crafting components extracted from storage (#469)
* Added % share of items that will be extracted from storage

* Added sort by percentage

* Apply suggestions from code review

Co-authored-by: Jakub <53441451+kuba6000@users.noreply.github.com>

* Optimized writing and reading packet. Copied changes from AEItemStack to AEFluidStack

* Fixed percent setting in AEFluidStack

* Some small numbers format changes

* Added precision up to 4 decimal places to tooltip

* Edited color thresholds (blue, green, orange, red)

* Apply suggestions from code review

Co-authored-by: Jakub <53441451+kuba6000@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Jakub <53441451+kuba6000@users.noreply.github.com>

* Spotless applied

* Apply suggestions from code review

Co-authored-by: Jakub <53441451+kuba6000@users.noreply.github.com>

* Spotless applied

* Import number format class

---------

Co-authored-by: Jakub <53441451+kuba6000@users.noreply.github.com>

--- a/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
+++ b/src/main/resources/assets/appliedenergistics2/lang/en_US.lang
@@ -234,6 +234,7 @@ gui.appliedenergistics2.Scheduled=Scheduled
 gui.appliedenergistics2.CraftingStatus=Crafting Status
 gui.appliedenergistics2.RemainingOperations=Idle Processors
 gui.appliedenergistics2.FromStorage=Available
+gui.appliedenergistics2.FromStoragePercent=Used
 gui.appliedenergistics2.ToCraft=To Craft
 gui.appliedenergistics2.ToCraftRequests=Steps
 gui.appliedenergistics2.CraftingPlan=Crafting Plan
@@ -395,6 +396,7 @@ gui.tooltips.appliedenergistics2.LevelType_Energy=Energy
 gui.tooltips.appliedenergistics2.LevelType_Item=Item
 gui.tooltips.appliedenergistics2.InventoryTweaks=Inventory Tweaks
 gui.tooltips.appliedenergistics2.Mod=Mod
+gui.tooltips.appliedenergistics2.UsedPercent=Percentage
 gui.tooltips.appliedenergistics2.TerminalStyle=Terminal Style
 gui.tooltips.appliedenergistics2.TerminalStyle_Full=Full Screen Terminal
 gui.tooltips.appliedenergistics2.TerminalStyle_Tall=Tall Centered Terminal
